fix(ng-table): integrate button, cases for image,download and copy

--- a/libs/ng-table-ui/.eslintrc.json
+++ b/libs/ng-table-ui/.eslintrc.json
@@ -17,7 +17,7 @@
           "error",
           {
             "type": "element",
-            "prefix": "my-ng-store",
+            "prefix": "ng-store",
             "style": "kebab-case"
           }
         ]
