--- a/libs/ng-table-ui/package.json
+++ b/libs/ng-table-ui/package.json
@@ -1,12 +1,30 @@
 {
-  "name": "@asjohmuel",
+  "name": "@asjohmuel/ng-table-ui",
   "version": "0.0.1",
-  "peerDependencies": {
-    "@angular/common": "^16.1.0",
-    "@angular/core": "^16.1.0"
+  "description": "Effortlessly render tables with support for customizable headers, grouped information ",
+  "publishConfig": {
+    "access": "public"
   },
+  "keywords": [
+    "angular",
+    "table",
+    "dynamic-table"
+  ],
   "dependencies": {
     "tslib": "^2.3.0"
   },
-  "sideEffects": false
+  "sideEffects": false,
+  "module": "fesm2022/aski_j_sam-ng-table-ui.mjs",
+  "typings": "index.d.ts",
+  "exports": {
+    "./package.json": {
+      "default": "./package.json"
+    },
+    ".": {
+      "types": "./index.d.ts",
+      "esm2022": "./esm2022/aski_j_sam-ng-table-ui.mjs",
+      "esm": "./esm2022/aski_j_sam-ng-table-ui.mjs",
+      "default": "./fesm2022/aski_j_sam-ng-table-ui.mjs"
+    }
+  }
 }
