feat(ngx-table): added functionality to support button and image

--- a/libs/ng-table-ui/.eslintrc.json
+++ b/libs/ng-table-ui/.eslintrc.json
@@ -17,7 +17,7 @@
           "error",
           {
             "type": "element",
-            "prefix": "ng-store",
+            "prefix": "",
             "style": "kebab-case"
           }
         ]
