--- a/libs/ng-table-ui/tsconfig.json
+++ b/libs/ng-table-ui/tsconfig.json
@@ -7,7 +7,10 @@
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "paths": {
+      "@my-ng-store/ngx-dynamic-table": ["libs/ng-table-ui/src/index.ts"]
+    }
   },
   "files": [],
   "include": [],
@@ -25,5 +28,6 @@
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true
-  }
+  },
+ 
 }
