--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@angular/platform-browser": "17.0.3",
     "@angular/platform-browser-dynamic": "17.0.3",
     "@angular/router": "17.0.3",
+    "@my-ng-store/ngx-dynamic-table": "^0.0.6",
     "@nx/angular": "17.1.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
